# strict-bytestring-builders

./: README.md  bytestring-builders-benchmark.cabal  flake.nix  run-benchmarks  stack.yaml
benchmark/: Main.hs
benchmark/Main/: BinaryTree.hs  BinaryTreeWithSize.hs  BufferBuilderMonoid.hs  Bytes.hs  Concat.hs  DList.hs  DListWithSize.hs  ListT.hs  Prelude.hs  Seq.hs  StrictBinaryTree.hs  StrictBinaryTreeWithSize.hs
concat-1-benchmark/: Main.hs
concat-100-benchmark/: Main.hs
concat-10000-benchmark/: Main.hs
foldl-1-benchmark/: Main.hs
foldl-100-benchmark/: Main.hs
foldl-10000-benchmark/: Main.hs
foldr-1-benchmark/: Main.hs
foldr-100-benchmark/: Main.hs
foldr-10000-benchmark/: Main.hs
results/: averagedAppends-1.html  averagedAppends-100.html  averagedAppends-10000.html  regularConcat-100.html  regularConcat-10000.html
