name:
  bytestring-builders-benchmark
version:
  1
category:
  Benchmark
synopsis:
  Comparison of different bytestring builders
homepage:
  https://github.com/nikita-volkov/bytestring-builders-benchmark 
bug-reports:
  https://github.com/nikita-volkov/bytestring-builders-benchmark/issues 
author:
  Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer:
  Nikita Volkov <nikita.y.volkov@mail.ru>
copyright:
  (c) 2015, Nikita Volkov
license:
  MIT
license-file:
  LICENSE
build-type:
  Simple
cabal-version:
  >=1.10

source-repository head
  type:
    git
  location:
    git://github.com/nikita-volkov/bytestring-builders-benchmark.git

library
  hs-source-dirs:
    library
  ghc-options:
  default-extensions:
    Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language:
    Haskell2010
  exposed-modules:
    ByteString.BuildersBenchmark.Subject
    ByteString.BuildersBenchmark.Subjects.StrictBuilder
  build-depends:
    -- benchmarking:
    criterion == 1.1.*,
    -- builders:
    blaze-builder >= 0.4.0.1 && < 0.5,
    buffer-builder >= 0.2.4 && < 0.3,
    bytestring-tree-builder >= 0.2.6 && < 0.3,
    bytestring-strict-builder == 0.4.*,
    binary >= 0.8 && < 0.10,
    cereal == 0.5.*,
    -- general:
    primitive >= 0.6 && < 0.7,
    rerebase == 1.*

executable benchmark
  hs-source-dirs:
    benchmark
  main-is:
    Main.hs
  other-modules:
    Main.BufferBuilderMonoid
    Main.Bytes
    Main.Concat
    Main.DList
    Main.DListWithSize
    Main.Prelude
    Main.Seq
  ghc-options:
    -O2
    -threaded
    "-with-rtsopts=-N"
    -funbox-strict-fields
  default-extensions:
    Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveTraversable, DeriveGeneric, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language:
    Haskell2010
  build-depends:
    -- benchmarking:
    criterion == 1.1.*,
    -- builders:
    blaze-builder >= 0.4.0.1 && < 0.5,
    buffer-builder >= 0.2.4 && < 0.3,
    bytestring-tree-builder >= 0.2.6 && < 0.3,
    bytestring-strict-builder == 0.4.*,
    binary >= 0.8 && < 0.10,
    cereal == 0.5.*,
    -- general:
    primitive >= 0.6 && < 0.7,
    rerebase == 1.*
