cabal-version: 2.4
name:
  bytestring-builders-benchmark
version:
  1
category:
  Benchmark
synopsis:
  Comparison of different bytestring builders
homepage:
  https://github.com/haskell-perf/strict-bytestring-builders
bug-reports:
  https://github.com/haskell-perf/strict-bytestring-builders/issues
author:
  Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer:
  Nikita Volkov <nikita.y.volkov@mail.ru>
copyright:
  (c) 2015, Nikita Volkov
license:
  MIT
license-file:
  LICENSE
build-type:
  Simple

source-repository head
  type:
    git
  location:
    git://github.com/haskell-perf/strict-bytestring-builders.git

library
  hs-source-dirs:
    library
  default-extensions:
    Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language:
    Haskell2010
  exposed-modules:
    ByteString.BuildersBenchmark.Subjects
    ByteString.BuildersBenchmark.Actions
    ByteString.BuildersBenchmark.Benchmarks
    ByteString.BuildersBenchmark.Inputs
  build-depends:
    -- benchmarking:
    gauge ^>=0.2,
    -- builders:
    blaze-builder >= 0.4.0.1 && < 0.5,
    buffer-builder >= 0.2.4 && < 0.3,
    bytestring-tree-builder >= 0.2.6 && < 0.3,
    bytestring-strict-builder >= 0.4.3 && < 0.5,
    binary >= 0.8 && < 0.10,
    cereal == 0.5.*,
    fast-builder ^>=0.1,
    mason ^>=0.2,
    ptr-poker ^>=0.1.2.8,
    -- general:
    rerebase == 1.*

benchmark benchmark
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    benchmark
  main-is:
    Main.hs
  ghc-options:
    -O2
    -threaded
    -funbox-strict-fields
  default-extensions:
    Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveTraversable, DeriveGeneric, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language:
    Haskell2010
  build-depends:
    bytestring-builders-benchmark,
    gauge,
    rerebase == 1.*
